@@ -1,5 +1,9 @@
 (This file, NEWS, lists new features and enhancements. See CHANGES for fixes.)
 
+pending
+
+  * Saving of read-only documents requires confirmation.
+
 3.1.2 2018-10-06
 
   * RepeatLast now accepts "Find" or "Replace" after its optional number so
